Fixed overscroll refreshing page on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@
 body {
     background-color: #785748;
 }
+
+html, body {
+  overscroll-behavior-y: none;
+}
